exam.domain/src/main/java/org/domain/model/examtemplate/ExamTemplateParser.java
// Generated from C:/Users/bruna/IdeaProjects/sem4pi-22-23-8/exam.domain/src/main/java/org/domain/model/examtemplate\ExamTemplate.g4 by ANTLR 4.12.0
package org.domain.model.examtemplate;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamTemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ID_OPTION=3, ID_SOLUTION=4, ID_EXAM=5, ID_EXAM_DESCRIPTION=6, 
		ID_OPEN_DATE=7, ID_CLOSE_DATE=8, ID_FEEDBACK_TYPE=9, ID_GRADE_TYPE=10, 
		ID_SECTION=11, DATE=12, TIME_TYPE=13, MATCHING=14, MULTIPLE_CHOICE=15, 
		SHORT_ANSWER=16, NUMERICAL=17, SELECT_WORDS=18, TRUE_FALSE=19, SOLUTION_TEXT=20, 
		TRUE_FALSE_SOLUTION_TEXT=21, SOL_DESCRIPTION=22, TRUE_FALSE_SOL_DESCRIPTION=23, 
		DESCRIPTION=24, NUMBER=25, NEWLINE=26, DECIMAL=27;
	public static final int
		RULE_start = 0, RULE_exam = 1, RULE_create_section = 2, RULE_quest = 3, 
		RULE_matching_quest = 4, RULE_multiple_choice_quest = 5, RULE_short_answer_quest = 6, 
		RULE_numerical_quest = 7, RULE_select_words_quest = 8, RULE_true_false_quest = 9, 
		RULE_create_option = 10, RULE_create_solution = 11, RULE_create_true_false_solution = 12, 
		RULE_create_exam_header = 13, RULE_create_exam = 14, RULE_create_exam_description = 15, 
		RULE_create_open_date = 16, RULE_create_close_date = 17, RULE_create_feedback_type = 18, 
		RULE_create_grade_type = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "exam", "create_section", "quest", "matching_quest", "multiple_choice_quest", 
			"short_answer_quest", "numerical_quest", "select_words_quest", "true_false_quest", 
			"create_option", "create_solution", "create_true_false_solution", "create_exam_header", 
			"create_exam", "create_exam_description", "create_open_date", "create_close_date", 
			"create_feedback_type", "create_grade_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", "';'", "'OPT'", "'SOL'", "'EXAM'", "'EXAM_DESCRIPTION'", 
			"'OPEN_DATE'", "'CLOSE_DATE'", "'FEEDBACK_TYPE'", "'GRADE_TYPE'", "'SECTION'", 
			null, null, "'MQUES'", "'MCQUES'", "'SAQUES'", "'NQUES'", "'SWQUES'", 
			"'TFQUES'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ID_OPTION", "ID_SOLUTION", "ID_EXAM", "ID_EXAM_DESCRIPTION", 
			"ID_OPEN_DATE", "ID_CLOSE_DATE", "ID_FEEDBACK_TYPE", "ID_GRADE_TYPE", 
			"ID_SECTION", "DATE", "TIME_TYPE", "MATCHING", "MULTIPLE_CHOICE", "SHORT_ANSWER", 
			"NUMERICAL", "SELECT_WORDS", "TRUE_FALSE", "SOLUTION_TEXT", "TRUE_FALSE_SOLUTION_TEXT", 
			"SOL_DESCRIPTION", "TRUE_FALSE_SOL_DESCRIPTION", "DESCRIPTION", "NUMBER", 
			"NEWLINE", "DECIMAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExamTemplate.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ExamContext exam() {
			return getRuleContext(ExamContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			exam();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExamContext extends ParserRuleContext {
		public Create_exam_headerContext create_exam_header() {
			return getRuleContext(Create_exam_headerContext.class,0);
		}
		public List<Create_sectionContext> create_section() {
			return getRuleContexts(Create_sectionContext.class);
		}
		public Create_sectionContext create_section(int i) {
			return getRuleContext(Create_sectionContext.class,i);
		}
		public ExamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterExam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitExam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitExam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExamContext exam() throws RecognitionException {
		ExamContext _localctx = new ExamContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			create_exam_header();
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				create_section();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID_SECTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_sectionContext extends ParserRuleContext {
		public TerminalNode ID_SECTION() { return getToken(ExamTemplateParser.ID_SECTION, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ExamTemplateParser.DESCRIPTION, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamTemplateParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamTemplateParser.NEWLINE, i);
		}
		public List<QuestContext> quest() {
			return getRuleContexts(QuestContext.class);
		}
		public QuestContext quest(int i) {
			return getRuleContext(QuestContext.class,i);
		}
		public Create_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterCreate_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitCreate_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitCreate_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_sectionContext create_section() throws RecognitionException {
		Create_sectionContext _localctx = new Create_sectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_section);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(ID_SECTION);
			setState(52);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(49);
					match(T__0);
					}
					} 
				}
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(55);
			match(DESCRIPTION);
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(56);
					match(T__0);
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(62);
			match(T__1);
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(63);
					match(NEWLINE);
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				quest();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1032192L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestContext extends ParserRuleContext {
		public Matching_questContext matching_quest() {
			return getRuleContext(Matching_questContext.class,0);
		}
		public Multiple_choice_questContext multiple_choice_quest() {
			return getRuleContext(Multiple_choice_questContext.class,0);
		}
		public Short_answer_questContext short_answer_quest() {
			return getRuleContext(Short_answer_questContext.class,0);
		}
		public Numerical_questContext numerical_quest() {
			return getRuleContext(Numerical_questContext.class,0);
		}
		public Select_words_questContext select_words_quest() {
			return getRuleContext(Select_words_questContext.class,0);
		}
		public True_false_questContext true_false_quest() {
			return getRuleContext(True_false_questContext.class,0);
		}
		public QuestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterQuest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitQuest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitQuest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestContext quest() throws RecognitionException {
		QuestContext _localctx = new QuestContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_quest);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATCHING:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				matching_quest();
				}
				break;
			case MULTIPLE_CHOICE:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				multiple_choice_quest();
				}
				break;
			case SHORT_ANSWER:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				short_answer_quest();
				}
				break;
			case NUMERICAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				numerical_quest();
				}
				break;
			case SELECT_WORDS:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				select_words_quest();
				}
				break;
			case TRUE_FALSE:
				enterOuterAlt(_localctx, 6);
				{
				setState(79);
				true_false_quest();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Matching_questContext extends ParserRuleContext {
		public TerminalNode MATCHING() { return getToken(ExamTemplateParser.MATCHING, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ExamTemplateParser.DESCRIPTION, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamTemplateParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamTemplateParser.NEWLINE, i);
		}
		public List<Create_optionContext> create_option() {
			return getRuleContexts(Create_optionContext.class);
		}
		public Create_optionContext create_option(int i) {
			return getRuleContext(Create_optionContext.class,i);
		}
		public List<Create_solutionContext> create_solution() {
			return getRuleContexts(Create_solutionContext.class);
		}
		public Create_solutionContext create_solution(int i) {
			return getRuleContext(Create_solutionContext.class,i);
		}
		public Matching_questContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching_quest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterMatching_quest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitMatching_quest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitMatching_quest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Matching_questContext matching_quest() throws RecognitionException {
		Matching_questContext _localctx = new Matching_questContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matching_quest);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(MATCHING);
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(83);
					match(T__0);
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(89);
			match(DESCRIPTION);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(90);
					match(T__0);
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(96);
			match(T__1);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(97);
					match(NEWLINE);
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(103);
				create_option();
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID_OPTION );
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				create_solution();
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID_SOLUTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_choice_questContext extends ParserRuleContext {
		public TerminalNode MULTIPLE_CHOICE() { return getToken(ExamTemplateParser.MULTIPLE_CHOICE, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ExamTemplateParser.DESCRIPTION, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamTemplateParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamTemplateParser.NEWLINE, i);
		}
		public List<Create_optionContext> create_option() {
			return getRuleContexts(Create_optionContext.class);
		}
		public Create_optionContext create_option(int i) {
			return getRuleContext(Create_optionContext.class,i);
		}
		public List<Create_solutionContext> create_solution() {
			return getRuleContexts(Create_solutionContext.class);
		}
		public Create_solutionContext create_solution(int i) {
			return getRuleContext(Create_solutionContext.class,i);
		}
		public Multiple_choice_questContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_choice_quest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterMultiple_choice_quest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitMultiple_choice_quest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitMultiple_choice_quest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_choice_questContext multiple_choice_quest() throws RecognitionException {
		Multiple_choice_questContext _localctx = new Multiple_choice_questContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multiple_choice_quest);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(MULTIPLE_CHOICE);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(114);
					match(T__0);
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(120);
			match(DESCRIPTION);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(121);
					match(T__0);
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(127);
			match(T__1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(128);
					match(NEWLINE);
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				create_option();
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID_OPTION );
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				create_solution();
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID_SOLUTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Short_answer_questContext extends ParserRuleContext {
		public TerminalNode SHORT_ANSWER() { return getToken(ExamTemplateParser.SHORT_ANSWER, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ExamTemplateParser.DESCRIPTION, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamTemplateParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamTemplateParser.NEWLINE, i);
		}
		public List<Create_solutionContext> create_solution() {
			return getRuleContexts(Create_solutionContext.class);
		}
		public Create_solutionContext create_solution(int i) {
			return getRuleContext(Create_solutionContext.class,i);
		}
		public Short_answer_questContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short_answer_quest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterShort_answer_quest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitShort_answer_quest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitShort_answer_quest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Short_answer_questContext short_answer_quest() throws RecognitionException {
		Short_answer_questContext _localctx = new Short_answer_questContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_short_answer_quest);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(SHORT_ANSWER);
			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(145);
					match(T__0);
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			setState(151);
			match(DESCRIPTION);
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(152);
					match(T__0);
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(158);
			match(T__1);
			setState(162);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(159);
					match(NEWLINE);
					}
					} 
				}
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			}
			setState(166); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(165);
				create_solution();
				}
				}
				setState(168); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID_SOLUTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Numerical_questContext extends ParserRuleContext {
		public TerminalNode NUMERICAL() { return getToken(ExamTemplateParser.NUMERICAL, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ExamTemplateParser.DESCRIPTION, 0); }
		public Create_solutionContext create_solution() {
			return getRuleContext(Create_solutionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamTemplateParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamTemplateParser.NEWLINE, i);
		}
		public Numerical_questContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numerical_quest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).enterNumerical_quest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamTemplateListener ) ((ExamTemplateListener)listener).exitNumerical_quest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamTemplateVisitor ) return ((ExamTemplateVisitor<? extends T>)visitor).visitNumerical_quest(this);
			else return visitor.visitChildren(this);
		}
	}
